Cleanup according to SonarLint. Changed all GET methods which was changing database to POST